SERVER-55220 Uninitialized scalar field